--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,52 +37,12 @@
     <![endif]-->
   </head>
   <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Ttd</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Главная", root_path  %></li>
-            <% if user_signed_in? %>
-              <li><%= link_to "Купить билет", new_search_path %></li>
-              <li><%= link_to "Мои билеты (#{current_user.tickets.count})", tickets_path %></li>
-            <% else %>
-              <li><%= link_to 'Войти', new_user_session_path %></li>
-              <li><%= link_to 'Регистрация', new_user_registration_path %></li>
-            <% end %>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <li><%= link_to "Аккаунт: #{current_user.email} / #{current_user.name}" %></li>
-              <li><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-
-      <% if user_signed_in? && current_user.admin? %>
-        <%= render 'layouts/admin_list' %>
-      <% else %>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-9">
-              <%= bootstrap_flash %>
-              <%= yield %>
-            </div>
-          </div><!--/row-->
-
-          <footer>
-            <%= render 'layouts/footer' %>
-          </footer>
-
-        </div> <!-- /container -->
-      <% end %>
-    </div>
+    <% if user_signed_in? && current_user.admin? %>
+      <%= render 'layouts/admin_navbar' %>
+    <% else %>
+      <%= render 'layouts/user_navbar' %>
+    <% end %>
+    <%= render 'layouts/container' %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
