--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -9,7 +9,7 @@
 
   <%= form_for(@search) do |form| %>
     <tr>
-      <td>
+      <td class='col-md-5'>
         <h3><%= form.label :title, 'Поиск билета' %></h3>
       </td>
     </tr>
