--- a/app/views/tickets_mailer/buy_ticket.html.erb
+++ b/app/views/tickets_mailer/buy_ticket.html.erb
@@ -1,4 +1,4 @@
 <p>Привет, <%= @user.name %></p>
 <p>Вы купили билет на маршрут <%= @ticket.route_title %></p>
-<p>Посмотреть билет Вы можете <%= link_to 'здесь', @ticket %>
-Все Ваши билеты Вы можете увидеть <%= link_to 'здесь', tickets_url %></p>
+<p>Посмотреть билет Вы можете <%= link_to 'здесь', @ticket %></p>
+<p>Все Ваши билеты Вы можете увидеть <%= link_to 'здесь', tickets_url %></p>
