missing attr added

--- a/app/views/admin/vans/_form.html.erb
+++ b/app/views/admin/vans/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@train, @van] do |form| %>
+<%= form_for [:admin, @train, @van] do |form| %>
   <%= render 'common/errors', resource: @van %>
   <p>для поезда <%= @train.number %>  </p>
   <div class="field">
