--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,12 +40,26 @@
     <![endif]-->
   </head>
   <body>
-    <% if user_signed_in? && current_user.admin? %>
-      <%= render 'layouts/admin_navbar' %>
-    <% else %>
-      <%= render 'layouts/user_navbar' %>
-    <% end %>
-    <%= render 'layouts/container' %>
-    <%= render 'layouts/footer' %>
+    <div class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <% if user_signed_in? %>
+            <a class="navbar-brand" href="#"><%= "#{current_user.admin? ? '=ADMIN=' : 'TTD'}" %></a>
+            <%= current_user.admin? ? (render 'layouts/admin_navbar') : (render 'layouts/user_navbar') %>
+          <% else %>
+            <a class="navbar-brand" href="#">TRANSPORT TYCOON DELUXE</a>
+          <% end %>
+          <%= render 'layouts/navbar_right' %>
+        </div>
+      </div>
+    </div>
+          <%= render 'layouts/container' %>
+          <%= render 'layouts/footer' %>
+
   </body>
 </html>
