--- a/app/views/searches/_search_train.html.erb
+++ b/app/views/searches/_search_train.html.erb
@@ -4,7 +4,7 @@
       <strong>поезд: </strong><%= train.number %><br />
       отправление: <%= route.railway_stations.find(@start_station).show_time_for('departure') %><br />
       прибытие: <%= route.railway_stations.find(@finish_station).show_time_for('arrival') %><br />
-      <% if current_user.admin? %>
+      <% if user_signed_in? && current_user.admin? %>
         <%= link_to 'Выбрать', new_admin_ticket_path(route_id: route.id,
                                                      start_station_id: @start_station,
                                                      finish_station_id: @finish_station,
