--- a/app/views/searches/new.html.erb
+++ b/app/views/searches/new.html.erb
@@ -1,5 +1,5 @@
 <table class='col-md-12'>
-  <% if current_user.admin? %>
+  <% if user_signed_in? && current_user.admin? %>
     <% @search.stations.each do |station| %>
       <tr>
         <%= render 'set_shedule', station: station %>
