--- a/app/views/layouts/_navbar_right.html.erb
+++ b/app/views/layouts/_navbar_right.html.erb
@@ -7,6 +7,8 @@
     <% if user_signed_in? %>
       <ul class="dropdown-menu dropdown-menu-sw">
         <li>
+          <li><%= link_to 'Купить билет', new_search_path %></li>
+          <li><%= link_to 'Мои билеты', tickets_path %></li>
           <li><%= link_to 'Изменить профиль', edit_user_registration_path %></li>
           <li><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
         </li>
