--- a/app/views/admin/railway_stations/_railway_station.html.erb
+++ b/app/views/admin/railway_stations/_railway_station.html.erb
@@ -1,6 +1,11 @@
 <tr>
-  <td><%= railway_station.title %></td>
+  <td>
+    <div id='railway_station_title_<%= railway_station.id %>'>
+      <%= railway_station.title %>
+    </div>
+      <%= render 'form', station: railway_station, hidden: true %>
+  </td>
   <td><%= link_to t('links.show'), [:admin, railway_station] %></td>
-  <td><%= link_to t('links.edit'), edit_admin_railway_station_path(railway_station) %></td>
+  <td><%= link_to t('links.edit'), '', class: 'edit_station', data: { station_id: railway_station.id } %></td>
   <td><%= link_to t('links.delete'), [:admin, railway_station], method: :delete, data: { confirm: 'Are you sure?' } %></td>
 </tr>
