--- a/app/views/admin/railway_stations/edit.html.erb
+++ b/app/views/admin/railway_stations/edit.html.erb
@@ -1,6 +1,6 @@
 <h4><%= t('.title') %></h4>
 
-<%= render 'form', railway_station: @railway_station %>
+<%= render 'form', station: @railway_station %>
 
 <%= link_to t('links.show'), [:admin, @railway_station] %> |
 <%= link_to t('links.back'), admin_railway_stations_path %>
