--- a/app/views/admin/railway_stations/new.html.erb
+++ b/app/views/admin/railway_stations/new.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t('.title') %></h1>
 
-<%= render 'form', railway_station: @railway_station %>
+<%= render 'form', station: @railway_station, hidden: false %>
 
 <%= link_to t('links.back'), admin_railway_stations_path %>
