--- a/app/views/admin/vans/_form.html.erb
+++ b/app/views/admin/vans/_form.html.erb
@@ -8,31 +8,31 @@
 
   <table>
     <tr>
-      <div class="field PlatzVan CoupeVan van" hidden>
+      <div class="field PlatzVan CoupeVan van_seats_field" hidden>
         <%= form.label :top_seats, 'Верхние ' %>
         <%= form.text_field :top_seats %>
       </div>
     </tr>
     <tr>
-      <div class="field PlatzVan CoupeVan SleepingVan van" hidden>
+      <div class="field PlatzVan CoupeVan SleepingVan van_seats_field" hidden>
         <%= form.label :bottom_seats, 'Нижние ' %>
         <%= form.text_field :bottom_seats %>
       </div>
     </tr>
     <tr>
-      <div class="field PlatzVan van" hidden>
+      <div class="field PlatzVan van_seats_field" hidden>
         <%= form.label :side_top_seats, 'Верхние боковые' %>
         <%= form.text_field :side_top_seats %>
       </div>
     </tr>
     <tr>
-      <div class="field PlatzVan van" hidden>
+      <div class="field PlatzVan van_seats_field" hidden>
         <%= form.label :side_bottom_seats, 'Нижние боковые' %>
         <%= form.text_field :side_bottom_seats %>
       </div>
     </tr>
     <tr>
-      <div class="field SedentaryVan van" hidden>
+      <div class="field SedentaryVan van_seats_field" hidden>
         <%= form.label :seats, 'Сидячие' %>
         <%= form.text_field :seats %>
       </div>
