--- a/app/views/admin/trains/index.html.erb
+++ b/app/views/admin/trains/index.html.erb
@@ -1,6 +1,6 @@
 <h4><%= t('.title') %></h4>
 
-<table>
+<table class='table table-hover'>
   <thead>
     <tr>
       <th><%= t('table.thead.number') %></th>
